--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.webkonsept.minecraft</groupId>
 	<artifactId>LagMeter</artifactId>
-	<version>1.15.0-SNAPSHOT</version>
+	<version>1.11.1</version>
 
 	<!-- Build Settings -->
 	<build>
