Fixed an issue where LagMeter would immediately trigger its lagwatcher

--- a/main/resources/settings.yml
+++ b/main/resources/settings.yml
@@ -25,9 +25,9 @@ displayEntitiesOnLoad: true
 #Can use any combination of these delimiters, for example, 1s35m2d, 1d, 3w1d, 2h1d, etc.
 UptimeCommands:
     commandList:
-        - /stop{<>}7d2m
-        - /reload{<>}12h30m30s
-        - /lag{<>}30m
+        - /stop<>7d2m
+        - /reload<>12h30m30s
+        - /lag<>30m
     #If the commands are set to repeat, they will be run, for example, if the uptime trigger is set to 4h, then it will run every 4h.
     repeatCommands: true
 #################
