--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.webkonsept.minecraft</groupId>
 	<artifactId>LagMeter</artifactId>
-	<version>1.11.1</version>
+	<version>1.15.0</version>
 
 	<!-- Build Settings -->
 	<build>
 		<sourceDirectory>main</sourceDirectory>
 		<resources>
-			<!--settings.yml -->
+			<!-- settings.yml -->
 			<resource>
 				<targetPath>main/resources</targetPath>
 				<filtering>true</filtering>
@@ -21,11 +21,12 @@
 				<excludes>
 				</excludes>
 			</resource>
-			<!--plugin.yml -->
+
+			<!-- plugin.yml -->
 			<resource>
 				<targetPath>.</targetPath>
 				<filtering>true</filtering>
-				<directory>${basedir}</directory>
+				<directory>${basedir}/main/resources</directory>
 				<includes>
 					<include>plugin.yml</include>
 				</includes>
@@ -39,19 +40,19 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.6</source>
+					<target>1.6</target>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
 
 	<dependencies>
-		<!--Bukkit -->
+		<!-- Bukkit -->
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.5.2-R1.0</version>
+			<version>1.6.4-R2.0</version>
 			<type>jar</type>
 		</dependency>
 	</dependencies>
