--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,10 @@
         <developerConnection>TheLunarFrog</developerConnection>
     </scm>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <!-- Build Settings -->
     <build>
         <finalName>LagMeter</finalName>
@@ -63,7 +67,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.6.4-R2.0</version>
+            <version>1.7.2-R0.3</version>
             <type>jar</type>
         </dependency>
     </dependencies>
