--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
             <version>1.7.2-R0.3</version>
             <type>jar</type>
         </dependency>
+        <!-- JUnit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <repositories>
