Well, evidently my build settings were just still set to use an old Bukkit and I compiled this with javac last time...

--- a/pom.xml
+++ b/pom.xml
@@ -66,9 +66,9 @@
     <dependencies>
         <!-- Bukkit -->
         <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.7.2-R0.3</version>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.9.2-R0.1-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
         <!-- JUnit -->
@@ -82,8 +82,8 @@
 
     <repositories>
         <repository>
-            <id>bukkit-repo</id>
-            <url>http://repo.bukkit.org/content/groups/public</url>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
         </repository>
     </repositories>
 </project>
