Add option to strip colors in console and command for terse output
Command is /lm s or /lm short

--- a/main/resources/settings.yml
+++ b/main/resources/settings.yml
@@ -16,6 +16,9 @@ LoadedChunksOnLoad: true
 #Should LagMeter display all of the entities that exist at the time of plugin (re)load?
 #Default: true
 displayEntitiesOnLoad: true
+#Should LagMeter not attempt to display colors in the console?
+#Default: true
+stripConsoleColors: true
 #########################
 # Uptime-based Commands #
 #########################
