--- a/pom.xml
+++ b/pom.xml
@@ -1,78 +1,31 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-						http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-    <!-- Project Information -->
-    <version>1.18.0-SNAPSHOT</version>
-    <groupId>com.webkonsept.minecraft.lagmeter</groupId>
-    <artifactId>LagMeter</artifactId>
-    <name>LagMeter</name>
-    <description>A lag and memory usage meter for Minecraft Bukkit servers.</description>
-    <url>http://dev.bukkit.org/bukkit-plugins/lagmeter/</url>
-    <inceptionYear>2011</inceptionYear>
-    <issueManagement>
-        <url>http://dev.bukkit.org/server-mods/lagmeter/tickets/</url>
-        <system>BukkitDev Ticket Management</system>
-    </issueManagement>
-    <scm>
-        <url>https://github.com/TheLunarFrog/LagMeter</url>
-        <developerConnection>TheLunarFrog</developerConnection>
-    </scm>
+  <groupId>com.moxvallix</groupId>
+  <artifactId>lagmeter</artifactId>
+  <version>1.19.0</version>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+  <name>LagMeter</name>
+  <!-- FIXME change it to the project's website -->
+  <url>http://www.moxvallix.com/lagmeter</url>
 
-    <!-- Build Settings -->
-    <build>
-        <finalName>LagMeter</finalName>
-        <defaultGoal>clean package install</defaultGoal>
-        <outputDirectory>output</outputDirectory>
-        <sourceDirectory>main/java</sourceDirectory>
-        <testSourceDirectory>test/java</testSourceDirectory>
-        <resources>
-            <!-- settings.yml -->
-            <resource>
-                <targetPath>./resources</targetPath>
-                <filtering>true</filtering>
-                <directory>main/resources</directory>
-                <includes>
-                    <include>settings.yml</include>
-                </includes>
-            </resource>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
+  </properties>
 
-            <!-- plugin.yml -->
-            <resource>
-                <targetPath>.</targetPath>
-                <filtering>true</filtering>
-                <directory>main/resources</directory>
-                <includes>
-                    <include>plugin.yml</include>
-                </includes>
-            </resource>
-        </resources>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.2</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-    <dependencies>
+  <dependencies>
         <!-- Spigot -->
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.13.1-R0.1-SNAPSHOT</version>
-            <type>jar</type>
-        </dependency>
+            <version>1.18-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+         </dependency>
 
         <!-- JUnit -->
         <dependency>
@@ -81,12 +34,18 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+  </dependencies>
 
-    <repositories>
-        <repository>
-            <id>spigot-repo</id>
-            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
-        </repository>
-    </repositories>
+  <build>
+    <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
+    <resources>
+      <resource>
+        <directory>${project.basedir}/src/main/resources</directory>
+        <includes>
+          <include>plugin.yml</include>
+          <include>settings.yml</include>
+        </includes>
+      </resource>
+    </resources>
+  </build>
 </project>
